Addressed review comments: -Header - Although, we have mentioned padding:10px the actual rendering is 13px. -The title of the main carousel should be 14px and not 16px. Jeff wanted the titles to accommodate larger texts. -Apple Iphone's text scaling-orientation bug -The spacing between the thumbnail the title and thumbanil should only be 20px.

--- a/assets/stylesheets/globals/_base.scss
+++ b/assets/stylesheets/globals/_base.scss
@@ -5,6 +5,7 @@
 	font-size:	$h1-font-size;
 	font-weight: bold;
 	font-family: $arial;
+	-webkit-text-size-adjust:none;
 }
 .mw-content-style{
 	color: #e3e2e2;
