--- a/assets/stylesheets/sections/_carousel.scss
+++ b/assets/stylesheets/sections/_carousel.scss
@@ -30,11 +30,11 @@
 		padding-top: 5px !important;
 	}
 	.car_item {
-        margin: 10px;
+       	margin: 0 10px 10px 10px;
         overflow: hidden
     }
 	.item-link-container{
-		margin: 10px;
+		margin: 0 10px 10px 10px;
 	}
 	.item-container{
 		width: 100% !important;
@@ -62,6 +62,7 @@
 			margin: 0 auto;
 			-webkit-line-clamp: 2;
 			-webkit-box-orient: vertical;
+			-webkit-text-size-adjust:none;
 			font-size: $base-font-size;
 			line-height: $base-font-size + 2;
 			font-family:arial;
@@ -69,11 +70,12 @@
     }
 }
 .mw-ob-what {
-    padding: 10px 15px !important;
+    padding: 0 15px !important;
     a{
       font-family:arial !important;
       color: $thumbnail_title !important;
       text-decoration: none;
+      -webkit-text-size-adjust:none;
       margin: 0 15px;     
     }
 }
